--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -29,7 +29,6 @@ body{
     &:hover{
         background: @hover-button-color;
         border-color: @hover-button-color;
-        transform: scale(1.03);
         color: @catalog-topnav-text-color;
     }
 
@@ -58,7 +57,6 @@ body{
 
     &:hover{
         background: @hover-button-color !important;
-        transform: scale(1.03) !important;
     }
 }
 
@@ -104,15 +102,61 @@ body{
     }
 }
 
+.product-item-inner{
+    .field.comment-box{
+        display: none;
+    }
+}
+
+.block-collapsible-nav .item.current > strong{
+    border-color: @hover-button-color;
+}
+
 @media (max-width: 767px){
     .block.block-collapsible-nav{
-        top: -10px;
+        top: 15px;
 
         .title.block-collapsible-nav-title{
             border-top: none;
             border-bottom: none;
             position: absolute;
-            top: -15px;
+            margin-top: -35px;
+        }
+        .content.block-collapsible-nav-content.active{
+            padding: 0;
+        }
+    }
+
+    .product-items{
+        display: flex;
+        flex-direction: column;
+
+        .product-item{
+            display: contents;
+
+            .product-item-info:not(:hover):not(.active) .product-item-inner{
+                border: none;
+                clip: 0;
+                height: auto;
+                padding: 0;
+                margin:0;
+                overflow: inherit;
+                position: static;
+                width: auto;
+                box-shadow: none;
+            }
+        }
+    }
+
+    .box-tocart{
+        .fieldset{
+            .product-item-actions{
+                .actions-primary{
+                    .action.tocart.primary{
+                        margin-left: 0;
+                    }
+                }
+            }
         }
     }
 }
